--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "phpunit/phpunit": "~7.0",
         "mockery/mockery": "^1.1",
         "orchestra/testbench": "~3.0",
-        "sempro/phpunit-pretty-print": "^1.0"
+        "sempro/phpunit-pretty-print": "^1.0",
+        "symplify/easy-coding-standard": "^6.0"
     },
     "autoload": {
         "psr-4": {
