--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
     "keywords": ["Laravel", "Quiz"],
     "require": {
         "php" : ">=7.0",
+        "beyondcode/laravel-websockets": "^1.3.*",
         "laracasts/flash": "^3.0",
         "laravelcollective/html": "^5.8.0",
+        "predis/predis": "^1.1",
         "yajra/laravel-datatables-buttons": "^4.6",
         "yajra/laravel-datatables-html": "^4.0",
         "yajra/laravel-datatables-oracle": "~9.0"
@@ -32,6 +34,9 @@
         "symplify/easy-coding-standard": "^6.0"
     },
     "autoload": {
+        "files": [
+            "PandoApps\\Quiz\\Helpers\\Helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "PandoApps\\Quiz\\": "src/"
@@ -46,6 +51,7 @@
         "laravel": {
             "providers": [
                 "PandoApps\\Quiz\\QuizServiceProvider",
+                "BeyondCode\\LaravelWebSockets\\WebSocketsServiceProvider",
                 "Yajra\\DataTables\\DataTablesServiceProvider",
                 "Yajra\\DataTables\\ButtonsServiceProvider",
                 "Yajra\\DataTables\\HtmlServiceProvider"
