--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "keywords": ["Laravel", "Quiz"],
     "require": {
         "php" : ">=7.0",
-        "beyondcode/laravel-websockets": "^1.3.*",
+        "beyondcode/laravel-websockets": "^1.3",
         "laracasts/flash": "^3.0",
         "laravelcollective/html": "^5.8.0",
         "predis/predis": "^1.1",
