Add description composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pandoapps/quiz",
-    "description": ":description",
+    "description": "Library for adding questionnaires into Laravel framework",
     "license": "MIT",
     "authors": [
         {
