--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pandoapps/quiz",
+    "name": "vinicius/quiz",
     "description": "Library for adding questionnaires into Laravel framework",
     "license": "MIT",
     "authors": [
